@@ -481,6 +481,7 @@ print (t)\
 #	106	CRC-32
 #	107	ADLER-32
 #	108	CRC-64 (ECMA-182 polynomial, untested uint64_t problems)
+#	109	Jenkins lookup3.c hashlittle()
 #
 # Note: choosing anything but MD5 introduces instant legacy incompatibility.
 %_build_file_digest_algo	1
