@@ -66,18 +66,19 @@ rpmdb/legacy.c
 rpmdb/merge.c
 rpmdb/poptDB.c
 rpmdb/rpmdb.c
-rpmdb/rpmhash.c
 rpmdb/sqlite.c
 rpmdb/tagname.c
 rpmio/argv.c
 rpmio/digest.c
 rpmio/fts.c
+rpmio/lookup3.c
 rpmio/macro.c
 rpmio/md2.c
 rpmio/md4.c
 rpmio/rmd128.c
 rpmio/rmd160.c
 rpmio/rpmdav.c
+rpmio/rpmhash.c
 rpmio/rpmhook.c
 rpmio/rpmio.c
 rpmio/rpmlog.c
