@@ -83,6 +83,7 @@
 	- move rmphash.[ch] into librpmio.
 	- fix: add error message on non-existent sources/patches.
 	- resuscitate build against external -lmagic.
+	- add lookup3.c hash (http://www.burtleburtle.net/bob/c/lookup3.c).
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
